# log_manager

./: .env.example  .gitmodules  README.md  install.sh  uninstall.sh
database/: schema.sql
log_api/: Cargo.toml
log_api/src/: main.rs
log_processor/: Cargo.toml
log_processor/src/: listener.rs  main.rs  processor.rs
website/: bun.lockb  package-lock.json  package.json
website/src/: app.html
website/src/routes/: +page.svelte  Header.svelte
