[package]
name = "log_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", default-features = false, features = ["get", "routes"] }
serde = "1.0.130"
sqlx = { version = "0.7.4", features = [ "mysql", "runtime-tokio-native-tls" ]}
dotenv = "0.15.0"
tokio = { version = "1.38.0", features = [ "macros" ]}